--- a/print.html
+++ b/print.html
@@ -148,7 +148,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>The ECU is a microprocessor-based system that receives input from various sensors, analyzes the data, and controls various driving functions based on the input. LibreCar is a small and affordable Engine Control Unit (ECU), an electronic control module that manages control of an automotive vehicle. </p>
+<p>The ECU is a microprocessor-based system that receives input from various sensors, analyzes the data, and controls various driving functions based on the input. LibreCar is a small and affordable device which can emulate an actual Engine Control Unit (ECU), an electronic control module that manages control of an automotive vehicle.</p>
+<p>Librecar is an all-in-one device for building, testing, monitoring, and experimenting with Automotive ECUs. Built around a unique FPGA-based architecture, Librecar’s digital hardware can be fully customized to suit the application at hand. As a result, it can act as a no-compromise Automotive protocol analyzer, an Automotive-hacking multi-tool, or an Automotive development platform.</p>
 <p>LibreCar comprises of:</p>
 <ul>
 <li>opensource hardware
@@ -168,7 +169,7 @@
 <ul>
 <li>DoIP ( Diagnostics over Internet Protocol )</li>
 <li>DLT ( Diagnostics Log and Trace ) </li>
-<li>XCP ( Universal Measurement and Calibration Protocol ) </li>
+<li>XCP ( Universal Measurement and Calibration Protocol )</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="target-group"><a class="header" href="#target-group">Target Group</a></h1>
 <p>Its modularity and versatility make it suitable for anyone in the below group :</p>
