--- a/target.html
+++ b/target.html
@@ -147,19 +147,16 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="target-group"><a class="header" href="#target-group">Target Group</a></h1>
-<p>Its modularity and versatility make it suitable for anyone in the below group :</p>
+<p>LibreCar is a fully reconfigurable test instrument that provides all the hardware, gateware, firmware, and software you will need to work with—and, indeed, to master Automotive domain. Below are a few of the challenges to which one should be able to apply LibreCar to:</p>
 <ul>
 <li>
-<p>Automotive manufacturers/suppliers: To develop Automotive functions like Diagnostics over an opensource HW where they can tweak it to better suite their product needs and are no longer tied to ASIC offering from semiconductor manufacturers.</p>
+<p>Protocol analysis for Automotive protocols like Diagnostics, XCP and DLT. Useful for both educators/students too understand the current working of automotive ECU and standard autmotive protocols.</p>
 </li>
 <li>
-<p>Researchers: To study current security and bandwidth limitations of modern automotive vehicles and come up with new approach to solve them.</p>
+<p>Creating your own custom Automotive ECU: LibreCar provides Amaranth gateware that allows you to create CAN and Ethernet devices in gateware, firmware, or a combination of the two. Useful for Automotive manufacturers/suppliers to develop solutions that they can tweak it to better suite their product needs and are no longer tied to ASIC offering from semiconductor manufacturers.</p>
 </li>
 <li>
-<p>Makers/Hobbyists: To learn how to make new products in automotive ecosystem and develop interesting Hardware and Software around it in opensource community</p>
-</li>
-<li>
-<p>Educators/students: To understand the current working of automotive ECU and its working principles.</p>
+<p>Security research: LibreCar hardware and gateware simplify the emulation and rapid prototyping of compliant and non-compliant Automotive devices. LibreCar based hardware is dynamically reconfigurable, so it gives you the flexibility to create any configuration for an ECU and engage in almost any (mis)behavior/hacks. Useful for researchers engaging in study of current security and bandwidth limitations of modern automotive vehicles and come up with new approach to solve them.</p>
 </li>
 </ul>
 
